# fmt

./: CMakeLists.txt  NEWS.rst  README.rst  buildbot.py  resolve.json  wscript
example/: main.cpp
